--- a/StudentPersonalAccount/StudentPersonalAccount.csproj
+++ b/StudentPersonalAccount/StudentPersonalAccount.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
   </ItemGroup>
 
 </Project>
